Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -183,6 +183,8 @@ Error message and password prompt
 
 <li>$:/temp/info-plugin</li>
 
+<li>$:/temp/search</li>
+
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
 <li>$:/themes/tiddlywiki/vanilla</li>
@@ -9764,7 +9766,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div list="Welcome [[How to Contribute?]]" title="$:/StoryList" revision="1" bag="default">
+<div created="20200122160313568" list="[[UCLA CS M151B - Computer Architecture]] [[Arithmetic for Computers]]" modified="20200122160315012" title="$:/StoryList" revision="7" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -9824,6 +9826,9 @@ Error message and password prompt
         }
     }
 }</pre>
+</div>
+<div created="20200122160310551" modified="20200122160310974" title="$:/temp/search" revision="3" bag="default">
+<pre>CS </pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.21" revision="0" bag="default">
 <pre>{
@@ -9992,7 +9997,7 @@ It is also unclear when something is fully defined because I think that implicit
 
 Another connected idea is Solomonoff induction but no clue what that is and seems to be more connected to prediction than definition.</pre>
 </div>
-<div created="20200122065241575" modified="20200122080518014" tags="incomplete [[computer architecture]]" title="Arithmetic for Computers" type="text/vnd.tiddlywiki" revision="0" bag="default">
+<div created="20200122065241575" modified="20200122173628590" tags="incomplete [[computer architecture]]" title="Arithmetic for Computers" type="text/vnd.tiddlywiki" revision="1" bag="default">
 <pre>Arithmetic for Computers:
 
 * Add &amp; Sub
@@ -10077,7 +10082,16 @@ Faster Adder:
 * 2N gate delays as 2 gates per Carry Out and N carry outs
 * Carry Lookahead Adder - generate - Bit i created new carry, $$ g_i = A_i \&amp; B_i$$
 
-3.3 - 3.6 pending</pre>
+3.3 - 3.6 pending
+
+Lecture Notes:
+Carry Look Ahead (CLA):
+4 bit CLA:
+defining generators 
+think about delays
+HiCLA:
+use hierarchy as fan in might get crazy if you try to do all at once
+L</pre>
 </div>
 <div created="20191120052924192" modified="20191121010447190" tags="incomplete research [[intelligence project]] [[machine learning]] [[reinforcement learning]]" title="Auxiliary Tasks in Reinforcement Learning" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre></pre>
