--- a/index.html
+++ b/index.html
@@ -183,8 +183,6 @@ Error message and password prompt
 
 <li>$:/temp/info-plugin</li>
 
-<li>$:/temp/search</li>
-
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
 <li>$:/themes/tiddlywiki/vanilla</li>
@@ -9766,7 +9764,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200122160313568" list="[[UCLA CS M151B - Computer Architecture]] [[Arithmetic for Computers]]" modified="20200122160315012" title="$:/StoryList" revision="7" bag="default">
+<div list="Welcome [[How to Contribute?]]" title="$:/StoryList" revision="1" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -9814,11 +9812,11 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1440&quot;
+            &quot;text&quot;: &quot;1920&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;900&quot;
+            &quot;text&quot;: &quot;1080&quot;
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
@@ -9826,9 +9824,6 @@ Error message and password prompt
         }
     }
 }</pre>
-</div>
-<div created="20200122160310551" modified="20200122160310974" title="$:/temp/search" revision="3" bag="default">
-<pre>CS </pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.21" revision="0" bag="default">
 <pre>{
@@ -9997,7 +9992,7 @@ It is also unclear when something is fully defined because I think that implicit
 
 Another connected idea is Solomonoff induction but no clue what that is and seems to be more connected to prediction than definition.</pre>
 </div>
-<div created="20200122065241575" modified="20200122173628590" tags="incomplete [[computer architecture]]" title="Arithmetic for Computers" type="text/vnd.tiddlywiki" revision="1" bag="default">
+<div created="20200122065241575" modified="20200122173629704" tags="incomplete [[computer architecture]]" title="Arithmetic for Computers" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Arithmetic for Computers:
 
 * Add &amp; Sub
